Algorithm-fix